Fixed main-nav scroll not visible on y overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4336,43 +4336,41 @@ body {
   /* line 212, ../scss/site/components/_main-nav.scss */
   .main-nav > ul {
     width: 100%;
-    height: 70%;
-    min-height: 32.5rem;
     text-align: center;
   }
-  /* line 218, ../scss/site/components/_main-nav.scss */
+  /* line 216, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li {
     line-height: 1.4;
   }
-  /* line 221, ../scss/site/components/_main-nav.scss */
+  /* line 219, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li > a {
     padding: 1.625rem 0.375rem;
   }
-  /* line 224, ../scss/site/components/_main-nav.scss */
+  /* line 222, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li > a span.text {
     font-size: 1.125rem;
     display: block;
   }
-  /* line 231, ../scss/site/components/_main-nav.scss */
+  /* line 229, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li:first-child > a {
     border-top-width: 1px;
   }
-  /* line 237, ../scss/site/components/_main-nav.scss */
+  /* line 235, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li:last-child > a {
     border-right: 0;
   }
-  /* line 244, ../scss/site/components/_main-nav.scss */
+  /* line 242, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li > ul > li > a {
     padding: 0.5rem 0.625rem;
     clear: both;
     overflow: hidden;
   }
-  /* line 249, ../scss/site/components/_main-nav.scss */
+  /* line 247, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li > ul > li > a i {
     width: 40px;
     float: right;
   }
-  /* line 254, ../scss/site/components/_main-nav.scss */
+  /* line 252, ../scss/site/components/_main-nav.scss */
   .main-nav > ul > li > ul > li > a span.text {
     float: right;
     width: 50%;
@@ -5544,19 +5542,13 @@ body {
 }
 
 /* line 2, ../scss/site/pages/_index.scss */
-.index .main-nav,
-.index .main-nav ul,
-.index .main-nav li {
-  overflow: visible;
-}
-/* line 8, ../scss/site/pages/_index.scss */
 .index .top-anchor {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -100000;
 }
-/* line 15, ../scss/site/pages/_index.scss */
+/* line 9, ../scss/site/pages/_index.scss */
 .index .back-to-top {
   position: fixed;
   z-index: 10;
@@ -5569,16 +5561,16 @@ body {
   transition: 400ms ease;
   transition-property: opacity, visibility;
 }
-/* line 27, ../scss/site/pages/_index.scss */
+/* line 21, ../scss/site/pages/_index.scss */
 .index .back-to-top:hover {
   color: #22303d;
 }
-/* line 31, ../scss/site/pages/_index.scss */
+/* line 25, ../scss/site/pages/_index.scss */
 .index .back-to-top.fade-in {
   opacity: 1;
   visibility: visible;
 }
-/* line 37, ../scss/site/pages/_index.scss */
+/* line 31, ../scss/site/pages/_index.scss */
 .index .content {
   position: relative;
   z-index: 2;
@@ -5586,23 +5578,30 @@ body {
   background: #f2f2f2;
   box-shadow: 0 -1px 2px rgba(60, 60, 60, 0.4), 0 1px 2px rgba(60, 60, 60, 0.4);
 }
-/* line 45, ../scss/site/pages/_index.scss */
+/* line 39, ../scss/site/pages/_index.scss */
 .index .main-article {
   padding: 3.125rem 0;
 }
-/* line 48, ../scss/site/pages/_index.scss */
+/* line 42, ../scss/site/pages/_index.scss */
 .index .main-article .article-icon {
   text-align: center;
   font-size: 2.125rem;
 }
-/* line 53, ../scss/site/pages/_index.scss */
+/* line 47, ../scss/site/pages/_index.scss */
 .index .main-article.photography {
   padding: 18% 0;
 }
 @media screen and (max-width: 39.938em) {
-  /* line 59, ../scss/site/pages/_index.scss */
+  /* line 53, ../scss/site/pages/_index.scss */
   .index .content {
     margin-top: 0;
+  }
+}
+@media screen and (max-width: 74.938em) {
+  /* line 59, ../scss/site/pages/_index.scss */
+  .index .main-nav,
+  .index .main-nav ul {
+    overflow: visible;
   }
 }
 
