--- a/src/assets/scss/site/components/_main-nav.scss
+++ b/src/assets/scss/site/components/_main-nav.scss
@@ -211,8 +211,6 @@
 
         > ul {
             width: 100%;
-            height: 70%;
-            min-height: rem-calc(520);
             text-align: center;
 
             > li {
