--- a/src/assets/scss/site/pages/_index.scss
+++ b/src/assets/scss/site/pages/_index.scss
@@ -1,10 +1,4 @@
 .index {
-    .main-nav,
-    .main-nav ul,
-    .main-nav li {
-        overflow: visible;
-    }
-
     .top-anchor {
         position: absolute;
         top: 0;
@@ -58,6 +52,13 @@
     @include breakpoint(small down) {
         .content {
             margin-top: 0;
+        }
+    }
+
+    @include breakpoint(large down) {
+        .main-nav,
+        .main-nav ul {
+            overflow: visible;
         }
     }
 }
